--- a/ux/package.json
+++ b/ux/package.json
@@ -13,10 +13,10 @@
     "ncu-u": "ncu -u -x codemirror,codemirror-asciidoc"
   },
   "dependencies": {
-    "@apollo/client": "3.8.4",
+    "@apollo/client": "3.8.5",
     "@lezer/common": "1.1.0",
-    "@mdi/font": "7.2.96",
-    "@quasar/extras": "1.16.6",
+    "@mdi/font": "7.3.67",
+    "@quasar/extras": "1.16.7",
     "@tiptap/core": "2.1.11",
     "@tiptap/extension-code-block": "2.1.11",
     "@tiptap/extension-code-block-lowlight": "2.1.11",
@@ -48,7 +48,7 @@
     "codemirror": "5.65.11",
     "codemirror-asciidoc": "1.0.4",
     "dependency-graph": "0.11.0",
-    "filesize": "10.0.12",
+    "filesize": "10.1.0",
     "filesize-parser": "1.5.0",
     "fuse.js": "6.6.2",
     "graphql": "16.6.0",
@@ -56,11 +56,11 @@
     "highlight.js": "11.8.0",
     "js-cookie": "3.0.5",
     "jwt-decode": "3.1.2",
-    "katex": "0.16.8",
+    "katex": "0.16.9",
     "lodash-es": "4.17.21",
     "lowlight": "3.0.0",
     "luxon": "3.4.3",
-    "markdown-it": "13.0.1",
+    "markdown-it": "13.0.2",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "4.1.6",
     "markdown-it-decorate": "1.2.2",
@@ -75,7 +75,7 @@
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mitt": "3.0.1",
-    "monaco-editor": "0.43.0",
+    "monaco-editor": "0.44.0",
     "pako": "2.1.0",
     "pinia": "2.1.6",
     "prosemirror-commands": "1.5.2",
@@ -84,8 +84,8 @@
     "prosemirror-model": "1.19.3",
     "prosemirror-schema-list": "1.3.0",
     "prosemirror-state": "1.4.3",
-    "prosemirror-transform": "1.7.5",
-    "prosemirror-view": "1.31.8",
+    "prosemirror-transform": "1.8.0",
+    "prosemirror-view": "1.32.0",
     "pug": "3.0.2",
     "quasar": "2.12.7",
     "slugify": "1.6.6",
@@ -95,9 +95,9 @@
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
     "uuid": "9.0.1",
-    "v-network-graph": "0.9.8",
+    "v-network-graph": "0.9.10",
     "vue": "3.3.4",
-    "vue-i18n": "9.4.1",
+    "vue-i18n": "9.5.0",
     "vue-router": "4.2.5",
     "vue3-otp-input": "0.4.1",
     "vuedraggable": "4.1.0",
@@ -105,13 +105,13 @@
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "1.2.0",
+    "@intlify/unplugin-vue-i18n": "1.4.0",
     "@quasar/app-vite": "1.6.2",
     "@types/lodash": "4.14.199",
-    "@volar/vue-language-plugin-pug": "1.6.5",
+    "@vue/language-plugin-pug": "1.8.16",
     "autoprefixer": "10.4.16",
     "browserlist": "latest",
-    "eslint": "8.50.0",
+    "eslint": "8.51.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-n": "16.1.0",
