--- a/server/package.json
+++ b/server/package.json
@@ -36,18 +36,18 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@apollo/server": "4.9.3",
+    "@apollo/server": "4.9.4",
     "@azure/storage-blob": "12.16.0",
     "@exlinc/keycloak-passport": "1.0.2",
     "@graphql-tools/schema": "10.0.0",
-    "@graphql-tools/utils": "10.0.1",
+    "@graphql-tools/utils": "10.0.6",
     "@joplin/turndown-plugin-gfm": "1.0.50",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
-    "aws-sdk": "2.1463.0",
+    "aws-sdk": "2.1472.0",
     "bcryptjs": "2.4.3",
     "chalk": "5.3.0",
     "cheerio": "1.0.0-rc.12",
@@ -64,8 +64,8 @@
     "custom-error-instance": "2.1.2",
     "dependency-graph": "0.11.0",
     "diff": "5.1.0",
-    "diff2html": "3.4.43",
-    "dompurify": "3.0.5",
+    "diff2html": "3.4.45",
+    "dompurify": "3.0.6",
     "dotize": "0.3.0",
     "emoji-regex": "10.2.1",
     "eventemitter2": "6.4.9",
@@ -73,7 +73,7 @@
     "express-brute": "1.0.1",
     "express-session": "1.17.3",
     "file-type": "18.5.0",
-    "filesize": "10.0.12",
+    "filesize": "10.1.0",
     "fs-extra": "11.1.1",
     "getos": "3.2.1",
     "graphql": "16.8.1",
@@ -91,13 +91,13 @@
     "js-yaml": "4.1.0",
     "jsdom": "22.1.0",
     "jsonwebtoken": "9.0.2",
-    "katex": "0.16.8",
+    "katex": "0.16.9",
     "klaw": "4.1.0",
-    "knex": "2.5.1",
+    "knex": "3.0.1",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "luxon": "3.4.3",
-    "markdown-it": "13.0.1",
+    "markdown-it": "13.0.2",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "4.1.6",
     "markdown-it-decorate": "1.2.2",
@@ -114,13 +114,13 @@
     "mathjax": "3.2.2",
     "mime-types": "2.1.35",
     "ms": "2.1.3",
-    "multer": "1.4.4",
+    "multer": "1.4.5-lts.1",
     "nanoid": "5.0.1",
     "node-2fa": "2.0.3",
     "node-cache": "5.1.2",
     "nodemailer": "6.9.5",
-    "objection": "3.1.1",
-    "octokit": "3.1.0",
+    "objection": "3.1.2",
+    "octokit": "3.1.1",
     "passport": "0.6.0",
     "passport-auth0": "1.4.3",
     "passport-azure-ad": "4.3.5",
@@ -138,7 +138,7 @@
     "passport-oauth2": "1.7.0",
     "passport-okta-oauth": "0.0.1",
     "passport-openidconnect": "0.1.1",
-    "passport-saml": "3.2.1",
+    "passport-saml": "3.2.4",
     "passport-slack-oauth2": "1.2.0",
     "passport-twitch-strategy": "2.2.0",
     "pem-jwk": "2.0.0",
@@ -147,9 +147,9 @@
     "pg-pubsub": "0.8.1",
     "pg-query-stream": "4.5.3",
     "pg-tsquery": "8.4.1",
-    "poolifier": "2.7.1",
+    "poolifier": "2.7.5",
     "punycode": "2.3.0",
-    "puppeteer-core": "21.3.4",
+    "puppeteer-core": "21.3.8",
     "qr-image": "3.2.0",
     "remove-markdown": "0.5.0",
     "request": "2.88.2",
@@ -160,7 +160,7 @@
     "semver": "7.5.4",
     "serve-favicon": "2.5.0",
     "sharp": "0.32.6",
-    "simple-git": "3.19.1",
+    "simple-git": "3.20.0",
     "socket.io": "4.7.2",
     "striptags": "3.2.0",
     "tar-fs": "3.0.4",
@@ -173,13 +173,13 @@
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "eslint": "8.50.0",
+    "eslint": "8.51.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-standard": "4.1.0",
+    "eslint-plugin-standard": "5.0.0",
     "nodemon": "3.0.1"
   },
   "overrides": {
