--- a/server/modules/analytics/azureinsights/definition.yml
+++ b/server/modules/analytics/azureinsights/definition.yml
@@ -6,8 +6,8 @@ logo: https://static.requarks.io/logo/azure.svg
 website: https://azure.microsoft.com/en-us/services/monitor/
 isAvailable: true
 props:
-  instrumentationKey:
+  connectionString:
     type: String
-    title: Instrumentation Key
+    title: Connection String
     hint: Found in the Azure Portal in your Application Insights resource panel
     order: 1
