--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
     - name: Build Assets
       working-directory: ux
       run: |
-        pnpm install
+        pnpm install --frozen-lockfile --shamefully-hoist
         pnpm build
 
     - name: Build Blocks
       working-directory: blocks
       run: |
-        pnpm install
+        pnpm install --frozen-lockfile
         pnpm build
 
     - name: Login to GitHub Container Registry
