feat: mail processing with vue email templates

--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
     "@simplewebauthn/server": "8.3.2",
+    "@vue-email/compiler": "0.8.0-beta.4",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
     "aws-sdk": "2.1478.0",
@@ -164,9 +165,11 @@
     "tar-fs": "3.0.4",
     "turndown": "7.1.2",
     "twemoji": "14.0.2",
+    "ufo": "1.3.1",
     "uslug": "1.0.4",
     "uuid": "9.0.1",
     "validate.js": "0.13.1",
+    "vue": "3.3.7",
     "xss": "1.0.14",
     "yargs": "17.7.2"
   },
