--- a/ux/package.json
+++ b/ux/package.json
@@ -43,6 +43,7 @@
     "@tiptap/pm": "2.1.12",
     "@tiptap/starter-kit": "2.1.12",
     "@tiptap/vue-3": "2.1.12",
+    "@vue/repl": "2.6.1",
     "apollo-upload-client": "17.0.0",
     "browser-fs-access": "0.35.0",
     "clipboard": "2.0.11",
@@ -95,6 +96,7 @@
     "tabulator-tables": "5.5.2",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
+    "typescript": "5.2.2",
     "uuid": "9.0.1",
     "v-network-graph": "0.9.10",
     "vue": "3.3.6",
