feat: metrics endpoint

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -41,6 +41,8 @@ defaults:
       host: ''
       secure: true
       verifySSL: true
+    metrics:
+      isEnabled: false
     auth:
       autoLogin: false
       enforce2FA: false
