--- a/ux/package.json
+++ b/ux/package.json
@@ -117,7 +117,8 @@
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-n": "16.3.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.18.1"
+    "eslint-plugin-vue": "9.18.1",
+    "eslint-plugin-vue-pug": "0.6.1"
   },
   "engines": {
     "node": ">= 18.0",
