--- a/server/package.json
+++ b/server/package.json
@@ -36,28 +36,28 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@apollo/server": "4.9.5",
+    "@apollo/server": "4.10.0",
     "@azure/storage-blob": "12.17.0",
     "@exlinc/keycloak-passport": "1.0.2",
-    "@graphql-tools/schema": "10.0.0",
-    "@graphql-tools/utils": "10.0.8",
+    "@graphql-tools/schema": "10.0.2",
+    "@graphql-tools/utils": "10.0.13",
     "@hexagon/base64": "1.1.28",
-    "@joplin/turndown-plugin-gfm": "1.0.53",
+    "@joplin/turndown-plugin-gfm": "1.0.54",
     "@node-saml/passport-saml": "4.0.4",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
-    "@simplewebauthn/server": "8.3.5",
-    "@vue-email/compiler": "0.8.0-beta.5",
+    "@simplewebauthn/server": "9.0.1",
+    "@vue-email/compiler": "0.8.9",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
-    "aws-sdk": "2.1499.0",
+    "aws-sdk": "2.1550.0",
     "bcryptjs": "2.4.3",
     "chalk": "5.3.0",
     "cheerio": "1.0.0-rc.12",
     "chokidar": "3.5.3",
     "chromium-pickle-js": "0.2.0",
-    "clean-css": "5.3.2",
+    "clean-css": "5.3.3",
     "command-exists": "1.2.9",
     "compression": "1.7.4",
     "connect-session-knex": "4.0.0",
@@ -66,65 +66,65 @@
     "cron-parser": "4.9.0",
     "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
-    "dependency-graph": "0.11.0",
+    "dependency-graph": "1.0.0",
     "diff": "5.1.0",
-    "diff2html": "3.4.45",
-    "dompurify": "3.0.6",
+    "diff2html": "3.4.47",
+    "dompurify": "3.0.8",
     "dotize": "0.3.0",
     "emoji-regex": "10.3.0",
     "eventemitter2": "6.4.9",
     "express": "4.18.2",
     "express-brute": "1.0.1",
-    "express-session": "1.17.3",
-    "file-type": "18.7.0",
+    "express-session": "1.18.0",
+    "file-type": "19.0.0",
     "filesize": "10.1.0",
-    "fs-extra": "11.1.1",
+    "fs-extra": "11.2.0",
     "getos": "3.2.1",
     "graphql": "16.8.1",
-    "graphql-list-fields": "2.0.2",
-    "graphql-rate-limit-directive": "2.0.4",
+    "graphql-list-fields": "2.0.3",
+    "graphql-rate-limit-directive": "2.0.5",
     "graphql-tools": "9.0.0",
     "graphql-upload": "16.0.2",
     "gray-matter": "4.0.3",
     "he": "1.2.0",
     "highlight.js": "11.9.0",
-    "image-size": "1.0.2",
-    "js-base64": "3.7.5",
+    "image-size": "1.1.1",
+    "js-base64": "3.7.6",
     "js-binary": "1.2.0",
     "js-yaml": "4.1.0",
-    "jsdom": "22.1.0",
+    "jsdom": "24.0.0",
     "jsonwebtoken": "9.0.2",
     "katex": "0.16.9",
     "klaw": "4.1.0",
-    "knex": "3.0.1",
+    "knex": "3.1.0",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "luxon": "3.4.4",
-    "markdown-it": "13.0.2",
-    "markdown-it-abbr": "1.0.4",
+    "markdown-it": "14.0.0",
+    "markdown-it-abbr": "2.0.0",
     "markdown-it-attrs": "4.1.6",
     "markdown-it-decorate": "1.2.2",
-    "markdown-it-emoji": "2.0.2",
+    "markdown-it-emoji": "3.0.0",
     "markdown-it-expand-tabs": "1.0.13",
-    "markdown-it-footnote": "3.0.3",
+    "markdown-it-footnote": "4.0.0",
     "markdown-it-imsize": "2.0.1",
-    "markdown-it-mark": "3.0.1",
-    "markdown-it-mdc": "0.1.4",
+    "markdown-it-mark": "4.0.0",
+    "markdown-it-mdc": "0.2.1",
     "markdown-it-multimd-table": "4.2.3",
-    "markdown-it-sub": "1.0.0",
-    "markdown-it-sup": "1.0.0",
+    "markdown-it-sub": "2.0.0",
+    "markdown-it-sup": "2.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mathjax": "3.2.2",
     "mime-types": "2.1.35",
     "ms": "2.1.3",
     "multer": "1.4.5-lts.1",
-    "nanoid": "5.0.3",
+    "nanoid": "5.0.5",
     "node-2fa": "2.0.3",
     "node-cache": "5.1.2",
-    "nodemailer": "6.9.7",
-    "objection": "3.1.2",
+    "nodemailer": "6.9.9",
+    "objection": "3.1.3",
     "octokit": "3.1.2",
-    "passport": "0.6.0",
+    "passport": "0.7.0",
     "passport-auth0": "1.4.4",
     "passport-azure-ad": "4.3.5",
     "passport-cas": "0.1.1",
@@ -138,7 +138,7 @@
     "passport-ldapauth": "3.0.1",
     "passport-local": "1.0.0",
     "passport-microsoft": "1.0.0",
-    "passport-oauth2": "1.7.0",
+    "passport-oauth2": "1.8.0",
     "passport-okta-oauth": "0.0.1",
     "passport-openidconnect": "0.1.1",
     "passport-slack-oauth2": "1.2.0",
@@ -148,11 +148,11 @@
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.8.1",
     "pg-query-stream": "4.5.3",
-    "pg-tsquery": "8.4.1",
-    "poolifier": "3.0.5",
-    "prom-client": "15.0.0",
+    "pg-tsquery": "8.4.2",
+    "poolifier": "3.1.19",
+    "prom-client": "15.1.0",
     "punycode": "2.3.1",
-    "puppeteer-core": "21.5.2",
+    "puppeteer-core": "21.11.0",
     "qr-image": "3.2.0",
     "remove-markdown": "0.5.0",
     "safe-regex": "2.1.1",
@@ -160,9 +160,9 @@
     "scim-query-filter-parser": "2.0.4",
     "semver": "7.5.4",
     "serve-favicon": "2.5.0",
-    "sharp": "0.32.6",
-    "simple-git": "3.20.0",
-    "socket.io": "4.7.2",
+    "sharp": "0.33.2",
+    "simple-git": "3.22.0",
+    "socket.io": "4.7.4",
     "striptags": "3.2.0",
     "tar-fs": "3.0.4",
     "turndown": "7.1.2",
@@ -171,18 +171,18 @@
     "uslug": "1.0.4",
     "uuid": "9.0.1",
     "validate.js": "0.13.1",
-    "vue": "3.3.8",
+    "vue": "3.4.15",
     "xss": "1.0.14",
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "eslint": "8.54.0",
+    "eslint": "8.56.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
-    "nodemon": "3.0.1"
+    "nodemon": "3.0.3"
   },
   "overrides": {
     "@graphql-tools/utils": "10.0.1"
