--- a/server/package.json
+++ b/server/package.json
@@ -124,6 +124,7 @@
     "nodemailer": "6.9.9",
     "objection": "3.1.3",
     "octokit": "3.1.2",
+    "packo": "2.1.0",
     "passport": "0.7.0",
     "passport-auth0": "1.4.4",
     "passport-azure-ad": "4.3.5",
