--- a/ux/package.json
+++ b/ux/package.json
@@ -5,41 +5,42 @@
   "productName": "Wiki.js",
   "author": "Nicolas Giard <nick@requarks.io>",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "quasar dev",
-    "build": "NODE_OPTIONS=--max-old-space-size=8192 quasar build"
+    "dev": "vite --force",
+    "build": "NODE_OPTIONS=--max-old-space-size=8192 vite build --emptyOutDir"
   },
   "dependencies": {
-    "@apollo/client": "3.9.2",
+    "@apollo/client": "3.9.9",
     "@lezer/common": "1.2.1",
     "@mdi/font": "7.4.47",
-    "@quasar/extras": "1.16.9",
+    "@quasar/extras": "1.16.11",
     "@simplewebauthn/browser": "9.0.1",
-    "@tiptap/core": "2.2.1",
-    "@tiptap/extension-code-block": "2.2.1",
-    "@tiptap/extension-code-block-lowlight": "2.2.1",
-    "@tiptap/extension-color": "2.2.1",
-    "@tiptap/extension-dropcursor": "2.2.1",
-    "@tiptap/extension-font-family": "2.2.1",
-    "@tiptap/extension-gapcursor": "2.2.1",
-    "@tiptap/extension-hard-break": "2.2.1",
-    "@tiptap/extension-highlight": "2.2.1",
-    "@tiptap/extension-history": "2.2.1",
-    "@tiptap/extension-image": "2.2.1",
-    "@tiptap/extension-mention": "2.2.1",
-    "@tiptap/extension-placeholder": "2.2.1",
-    "@tiptap/extension-table": "2.2.1",
-    "@tiptap/extension-table-cell": "2.2.1",
-    "@tiptap/extension-table-header": "2.2.1",
-    "@tiptap/extension-table-row": "2.2.1",
-    "@tiptap/extension-task-item": "2.2.1",
-    "@tiptap/extension-task-list": "2.2.1",
-    "@tiptap/extension-text-align": "2.2.1",
-    "@tiptap/extension-text-style": "2.2.1",
-    "@tiptap/extension-typography": "2.2.1",
-    "@tiptap/pm": "2.2.1",
-    "@tiptap/starter-kit": "2.2.1",
-    "@tiptap/vue-3": "2.2.1",
+    "@tiptap/core": "2.2.4",
+    "@tiptap/extension-code-block": "2.2.4",
+    "@tiptap/extension-code-block-lowlight": "2.2.4",
+    "@tiptap/extension-color": "2.2.4",
+    "@tiptap/extension-dropcursor": "2.2.4",
+    "@tiptap/extension-font-family": "2.2.4",
+    "@tiptap/extension-gapcursor": "2.2.4",
+    "@tiptap/extension-hard-break": "2.2.4",
+    "@tiptap/extension-highlight": "2.2.4",
+    "@tiptap/extension-history": "2.2.4",
+    "@tiptap/extension-image": "2.2.4",
+    "@tiptap/extension-mention": "2.2.4",
+    "@tiptap/extension-placeholder": "2.2.4",
+    "@tiptap/extension-table": "2.2.4",
+    "@tiptap/extension-table-cell": "2.2.4",
+    "@tiptap/extension-table-header": "2.2.4",
+    "@tiptap/extension-table-row": "2.2.4",
+    "@tiptap/extension-task-item": "2.2.4",
+    "@tiptap/extension-task-list": "2.2.4",
+    "@tiptap/extension-text-align": "2.2.4",
+    "@tiptap/extension-text-style": "2.2.4",
+    "@tiptap/extension-typography": "2.2.4",
+    "@tiptap/pm": "2.2.4",
+    "@tiptap/starter-kit": "2.2.4",
+    "@tiptap/vue-3": "2.2.4",
     "@vue/repl": "3.4.0",
     "apollo-upload-client": "18.0.1",
     "browser-fs-access": "0.35.0",
@@ -47,19 +48,19 @@
     "codemirror": "5.65.11",
     "codemirror-asciidoc": "1.0.4",
     "dependency-graph": "1.0.0",
-    "filesize": "10.1.0",
+    "filesize": "10.1.1",
     "filesize-parser": "1.5.0",
     "fuse.js": "7.0.0",
-    "graphql": "16.6.0",
+    "graphql": "16.8.1",
     "graphql-tag": "2.12.6",
     "highlight.js": "11.9.0",
     "js-cookie": "3.0.5",
     "jwt-decode": "4.0.0",
-    "katex": "0.16.9",
+    "katex": "0.16.10",
     "lodash-es": "4.17.21",
     "lowlight": "3.1.0",
     "luxon": "3.4.4",
-    "markdown-it": "14.0.0",
+    "markdown-it": "14.1.0",
     "markdown-it-abbr": "2.0.0",
     "markdown-it-attrs": "4.1.6",
     "markdown-it-decorate": "1.2.2",
@@ -68,57 +69,61 @@
     "markdown-it-footnote": "4.0.0",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "4.0.0",
-    "markdown-it-mdc": "0.2.2",
+    "markdown-it-mdc": "0.2.3",
     "markdown-it-multimd-table": "4.2.3",
     "markdown-it-sub": "2.0.0",
     "markdown-it-sup": "2.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mitt": "3.0.1",
-    "monaco-editor": "0.45.0",
+    "monaco-editor": "0.47.0",
     "pako": "2.1.0",
     "pinia": "2.1.7",
     "prosemirror-commands": "1.5.2",
-    "prosemirror-history": "1.3.2",
+    "prosemirror-history": "1.4.0",
     "prosemirror-keymap": "1.2.2",
     "prosemirror-model": "1.19.4",
     "prosemirror-schema-list": "1.3.0",
     "prosemirror-state": "1.4.3",
     "prosemirror-transform": "1.8.0",
-    "prosemirror-view": "1.32.7",
+    "prosemirror-view": "1.33.3",
     "pug": "3.0.2",
-    "quasar": "2.14.3",
+    "quasar": "2.15.2",
     "slugify": "1.6.6",
-    "socket.io-client": "4.7.4",
+    "socket.io-client": "4.7.5",
     "sortablejs": "1.15.2",
     "sortablejs-vue3": "1.2.11",
-    "tabulator-tables": "5.5.4",
+    "tabulator-tables": "6.2.0",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "typescript": "5.3.3",
+    "typescript": "5.4.3",
     "uuid": "9.0.1",
-    "v-network-graph": "0.9.14",
-    "vue": "3.4.15",
-    "vue-i18n": "9.9.1",
-    "vue-router": "4.2.5",
-    "vue3-otp-input": "0.4.1",
+    "v-network-graph": "0.9.15",
+    "vue": "3.4.21",
+    "vue-i18n": "9.10.2",
+    "vue-router": "4.3.0",
+    "vue3-otp-input": "0.4.4",
     "vuedraggable": "4.1.0",
     "xterm": "5.3.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "2.0.0",
-    "@quasar/app-vite": "1.7.3",
-    "@types/lodash": "4.14.202",
-    "@vue/language-plugin-pug": "1.8.27",
-    "autoprefixer": "10.4.17",
+    "@eslint/js": "8.57.0",
+    "@intlify/unplugin-vue-i18n": "4.0.0",
+    "@quasar/app-vite": "2.0.0-beta.5",
+    "@quasar/vite-plugin": "1.6.0",
+    "@types/lodash": "4.17.0",
+    "@vue/devtools": "7.0.25",
+    "@vue/language-plugin-pug": "2.0.7",
+    "autoprefixer": "10.4.19",
     "browserlist": "latest",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-n": "16.6.2",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.21.1",
-    "eslint-plugin-vue-pug": "0.6.1"
+    "eslint-plugin-vue": "9.24.0",
+    "eslint-plugin-vue-pug": "0.6.2",
+    "sass": "1.72.0"
   },
   "engines": {
     "node": ">= 18.0",
