--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -13,6 +13,8 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+containerPort: 3000
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
