add healthcheck for posgres docker

--- a/dev/examples/docker-compose.yml
+++ b/dev/examples/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     restart: unless-stopped
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-q", "-d", "wiki", "-U", "wikijs"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   wiki:
     image: requarks/wiki:2
