--- a/ux/package.json
+++ b/ux/package.json
@@ -11,37 +11,38 @@
     "build": "NODE_OPTIONS=--max-old-space-size=8192 vite build --emptyOutDir"
   },
   "dependencies": {
-    "@apollo/client": "3.9.9",
+    "@apollo/client": "3.9.11",
     "@lezer/common": "1.2.1",
     "@mdi/font": "7.4.47",
     "@quasar/extras": "1.16.11",
-    "@simplewebauthn/browser": "9.0.1",
-    "@tiptap/core": "2.2.4",
-    "@tiptap/extension-code-block": "2.2.4",
-    "@tiptap/extension-code-block-lowlight": "2.2.4",
-    "@tiptap/extension-color": "2.2.4",
-    "@tiptap/extension-dropcursor": "2.2.4",
-    "@tiptap/extension-font-family": "2.2.4",
-    "@tiptap/extension-gapcursor": "2.2.4",
-    "@tiptap/extension-hard-break": "2.2.4",
-    "@tiptap/extension-highlight": "2.2.4",
-    "@tiptap/extension-history": "2.2.4",
-    "@tiptap/extension-image": "2.2.4",
-    "@tiptap/extension-mention": "2.2.4",
-    "@tiptap/extension-placeholder": "2.2.4",
-    "@tiptap/extension-table": "2.2.4",
-    "@tiptap/extension-table-cell": "2.2.4",
-    "@tiptap/extension-table-header": "2.2.4",
-    "@tiptap/extension-table-row": "2.2.4",
-    "@tiptap/extension-task-item": "2.2.4",
-    "@tiptap/extension-task-list": "2.2.4",
-    "@tiptap/extension-text-align": "2.2.4",
-    "@tiptap/extension-text-style": "2.2.4",
-    "@tiptap/extension-typography": "2.2.4",
-    "@tiptap/pm": "2.2.4",
-    "@tiptap/starter-kit": "2.2.4",
-    "@tiptap/vue-3": "2.2.4",
+    "@simplewebauthn/browser": "10.0.0",
+    "@tiptap/core": "2.3.0",
+    "@tiptap/extension-code-block": "2.3.0",
+    "@tiptap/extension-code-block-lowlight": "2.3.0",
+    "@tiptap/extension-color": "2.3.0",
+    "@tiptap/extension-dropcursor": "2.3.0",
+    "@tiptap/extension-font-family": "2.3.0",
+    "@tiptap/extension-gapcursor": "2.3.0",
+    "@tiptap/extension-hard-break": "2.3.0",
+    "@tiptap/extension-highlight": "2.3.0",
+    "@tiptap/extension-history": "2.3.0",
+    "@tiptap/extension-image": "2.3.0",
+    "@tiptap/extension-mention": "2.3.0",
+    "@tiptap/extension-placeholder": "2.3.0",
+    "@tiptap/extension-table": "2.3.0",
+    "@tiptap/extension-table-cell": "2.3.0",
+    "@tiptap/extension-table-header": "2.3.0",
+    "@tiptap/extension-table-row": "2.3.0",
+    "@tiptap/extension-task-item": "2.3.0",
+    "@tiptap/extension-task-list": "2.3.0",
+    "@tiptap/extension-text-align": "2.3.0",
+    "@tiptap/extension-text-style": "2.3.0",
+    "@tiptap/extension-typography": "2.3.0",
+    "@tiptap/pm": "2.3.0",
+    "@tiptap/starter-kit": "2.3.0",
+    "@tiptap/vue-3": "2.3.0",
     "@vue/repl": "3.4.0",
+    "@xterm/xterm": "5.5.0",
     "apollo-upload-client": "18.0.1",
     "browser-fs-access": "0.35.0",
     "clipboard": "2.0.11",
@@ -81,13 +82,13 @@
     "prosemirror-commands": "1.5.2",
     "prosemirror-history": "1.4.0",
     "prosemirror-keymap": "1.2.2",
-    "prosemirror-model": "1.19.4",
+    "prosemirror-model": "1.20.0",
     "prosemirror-schema-list": "1.3.0",
     "prosemirror-state": "1.4.3",
     "prosemirror-transform": "1.8.0",
-    "prosemirror-view": "1.33.3",
+    "prosemirror-view": "1.33.4",
     "pug": "3.0.2",
-    "quasar": "2.15.2",
+    "quasar": "2.15.3",
     "slugify": "1.6.6",
     "socket.io-client": "4.7.5",
     "sortablejs": "1.15.2",
@@ -95,15 +96,14 @@
     "tabulator-tables": "6.2.0",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "typescript": "5.4.3",
+    "typescript": "5.4.5",
     "uuid": "9.0.1",
     "v-network-graph": "0.9.15",
-    "vue": "3.4.21",
-    "vue-i18n": "9.10.2",
-    "vue-router": "4.3.0",
+    "vue": "3.4.23",
+    "vue-i18n": "9.13.1",
+    "vue-router": "4.3.2",
     "vue3-otp-input": "0.4.4",
     "vuedraggable": "4.1.0",
-    "xterm": "5.3.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
@@ -112,8 +112,8 @@
     "@quasar/app-vite": "2.0.0-beta.5",
     "@quasar/vite-plugin": "1.6.0",
     "@types/lodash": "4.17.0",
-    "@vue/devtools": "7.0.25",
-    "@vue/language-plugin-pug": "2.0.7",
+    "@vue/devtools": "7.0.27",
+    "@vue/language-plugin-pug": "2.0.13",
     "autoprefixer": "10.4.19",
     "browserlist": "latest",
     "eslint": "8.57.0",
@@ -121,9 +121,9 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-n": "16.6.2",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.24.0",
+    "eslint-plugin-vue": "9.25.0",
     "eslint-plugin-vue-pug": "0.6.2",
-    "sass": "1.72.0"
+    "sass": "1.75.0"
   },
   "engines": {
     "node": ">= 18.0",
