refactor(ux): update dependencies + adapt to SASS 2.0 color functions

--- a/ux/package.json
+++ b/ux/package.json
@@ -11,36 +11,36 @@
     "build": "NODE_OPTIONS=--max-old-space-size=8192 vite build --emptyOutDir"
   },
   "dependencies": {
-    "@apollo/client": "3.10.8",
-    "@lezer/common": "1.2.1",
+    "@apollo/client": "3.11.8",
+    "@lezer/common": "1.2.3",
     "@mdi/font": "7.4.47",
     "@quasar/extras": "1.16.12",
-    "@simplewebauthn/browser": "10.0.0",
-    "@tiptap/core": "2.4.0",
-    "@tiptap/extension-code-block": "2.4.0",
-    "@tiptap/extension-code-block-lowlight": "2.4.0",
-    "@tiptap/extension-color": "2.4.0",
-    "@tiptap/extension-dropcursor": "2.4.0",
-    "@tiptap/extension-font-family": "2.4.0",
-    "@tiptap/extension-gapcursor": "2.4.0",
-    "@tiptap/extension-hard-break": "2.4.0",
-    "@tiptap/extension-highlight": "2.4.0",
-    "@tiptap/extension-history": "2.4.0",
-    "@tiptap/extension-image": "2.4.0",
-    "@tiptap/extension-mention": "2.4.0",
-    "@tiptap/extension-placeholder": "2.4.0",
-    "@tiptap/extension-table": "2.4.0",
-    "@tiptap/extension-table-cell": "2.4.0",
-    "@tiptap/extension-table-header": "2.4.0",
-    "@tiptap/extension-table-row": "2.4.0",
-    "@tiptap/extension-task-item": "2.4.0",
-    "@tiptap/extension-task-list": "2.4.0",
-    "@tiptap/extension-text-align": "2.4.0",
-    "@tiptap/extension-text-style": "2.4.0",
-    "@tiptap/extension-typography": "2.4.0",
-    "@tiptap/pm": "2.4.0",
-    "@tiptap/starter-kit": "2.4.0",
-    "@tiptap/vue-3": "2.4.0",
+    "@simplewebauthn/browser": "11.0.0",
+    "@tiptap/core": "2.8.0",
+    "@tiptap/extension-code-block": "2.8.0",
+    "@tiptap/extension-code-block-lowlight": "2.8.0",
+    "@tiptap/extension-color": "2.8.0",
+    "@tiptap/extension-dropcursor": "2.8.0",
+    "@tiptap/extension-font-family": "2.8.0",
+    "@tiptap/extension-gapcursor": "2.8.0",
+    "@tiptap/extension-hard-break": "2.8.0",
+    "@tiptap/extension-highlight": "2.8.0",
+    "@tiptap/extension-history": "2.8.0",
+    "@tiptap/extension-image": "2.8.0",
+    "@tiptap/extension-mention": "2.8.0",
+    "@tiptap/extension-placeholder": "2.8.0",
+    "@tiptap/extension-table": "2.8.0",
+    "@tiptap/extension-table-cell": "2.8.0",
+    "@tiptap/extension-table-header": "2.8.0",
+    "@tiptap/extension-table-row": "2.8.0",
+    "@tiptap/extension-task-item": "2.8.0",
+    "@tiptap/extension-task-list": "2.8.0",
+    "@tiptap/extension-text-align": "2.8.0",
+    "@tiptap/extension-text-style": "2.8.0",
+    "@tiptap/extension-typography": "2.8.0",
+    "@tiptap/pm": "2.8.0",
+    "@tiptap/starter-kit": "2.8.0",
+    "@tiptap/vue-3": "2.8.0",
     "@vue/repl": "3.4.0",
     "@xterm/xterm": "5.5.0",
     "apollo-upload-client": "18.0.1",
@@ -49,10 +49,10 @@
     "codemirror": "5.65.11",
     "codemirror-asciidoc": "1.0.4",
     "dependency-graph": "1.0.0",
-    "filesize": "10.1.4",
-    "filesize-parser": "1.5.0",
+    "filesize": "10.1.6",
+    "filesize-parser": "1.5.1",
     "fuse.js": "7.0.0",
-    "graphql": "16.8.1",
+    "graphql": "16.9.0",
     "graphql-tag": "2.12.6",
     "highlight.js": "11.10.0",
     "js-cookie": "3.0.5",
@@ -60,10 +60,10 @@
     "katex": "0.16.11",
     "lodash-es": "4.17.21",
     "lowlight": "3.1.0",
-    "luxon": "3.4.4",
+    "luxon": "3.5.0",
     "markdown-it": "14.1.0",
     "markdown-it-abbr": "2.0.0",
-    "markdown-it-attrs": "4.1.6",
+    "markdown-it-attrs": "4.2.0",
     "markdown-it-decorate": "1.2.2",
     "markdown-it-emoji": "3.0.0",
     "markdown-it-expand-tabs": "1.0.13",
@@ -76,54 +76,54 @@
     "markdown-it-sup": "2.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mitt": "3.0.1",
-    "monaco-editor": "0.50.0",
+    "monaco-editor": "0.52.0",
     "pako": "2.1.0",
-    "pinia": "2.1.7",
-    "prosemirror-commands": "1.5.2",
+    "pinia": "2.2.4",
+    "prosemirror-commands": "1.6.1",
     "prosemirror-history": "1.4.1",
     "prosemirror-keymap": "1.2.2",
-    "prosemirror-model": "1.21.3",
-    "prosemirror-schema-list": "1.4.0",
+    "prosemirror-model": "1.23.0",
+    "prosemirror-schema-list": "1.4.1",
     "prosemirror-state": "1.4.3",
-    "prosemirror-transform": "1.9.0",
-    "prosemirror-view": "1.33.8",
+    "prosemirror-transform": "1.10.2",
+    "prosemirror-view": "1.34.3",
     "pug": "3.0.3",
-    "quasar": "2.16.6",
+    "quasar": "2.17.1",
     "slugify": "1.6.6",
-    "socket.io-client": "4.7.5",
-    "sortablejs": "1.15.2",
+    "socket.io-client": "4.8.0",
+    "sortablejs": "1.15.3",
     "sortablejs-vue3": "1.2.11",
-    "tabulator-tables": "6.2.1",
+    "tabulator-tables": "6.3.0",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "typescript": "5.5.3",
+    "typescript": "5.6.3",
     "uuid": "10.0.0",
-    "v-network-graph": "0.9.16",
-    "vue": "3.4.31",
-    "vue-i18n": "9.13.1",
-    "vue-router": "4.4.0",
+    "v-network-graph": "0.9.17",
+    "vue": "3.5.12",
+    "vue-i18n": "10.0.4",
+    "vue-router": "4.4.5",
     "vue3-otp-input": "0.5.21",
     "vuedraggable": "4.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@eslint/js": "8.57.0",
-    "@intlify/unplugin-vue-i18n": "4.0.0",
-    "@quasar/app-vite": "2.0.0-beta.15",
-    "@quasar/vite-plugin": "1.7.0",
-    "@types/lodash": "4.17.6",
-    "@vue/devtools": "7.0.27",
-    "@vue/language-plugin-pug": "2.0.26",
-    "autoprefixer": "10.4.19",
+    "@eslint/js": "9.13.0",
+    "@intlify/unplugin-vue-i18n": "5.2.0",
+    "@quasar/app-vite": "2.0.0-beta.24",
+    "@quasar/vite-plugin": "1.8.0",
+    "@types/lodash": "4.17.12",
+    "@vue/devtools": "7.5.2",
+    "@vue/language-plugin-pug": "2.1.6",
+    "autoprefixer": "10.4.20",
     "browserlist": "latest",
-    "eslint": "8.57.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-promise": "6.4.0",
-    "eslint-plugin-vue": "9.27.0",
+    "eslint": "9.13.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-n": "17.11.1",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-vue": "9.29.0",
     "eslint-plugin-vue-pug": "0.6.2",
-    "sass": "1.77.8"
+    "neostandard": "0.11.6",
+    "sass": "1.80.3"
   },
   "engines": {
     "node": ">= 18.0",
