--- a/ux/package.json
+++ b/ux/package.json
@@ -128,5 +128,6 @@
   "engines": {
     "node": ">= 18.0",
     "npm": ">= 6.13.4"
-  }
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
