--- a/blocks/package.json
+++ b/blocks/package.json
@@ -11,14 +11,15 @@
   "author": "Nicolas Giard",
   "license": "AGPL-3.0",
   "dependencies": {
-    "lit": "2.8.0"
+    "lit": "3.2.1"
   },
   "devDependencies": {
-    "@rollup/plugin-graphql": "2.0.4",
-    "@rollup/plugin-node-resolve": "15.2.2",
+    "@rollup/plugin-graphql": "2.0.5",
+    "@rollup/plugin-node-resolve": "15.3.0",
     "@rollup/plugin-terser": "0.4.4",
-    "glob": "10.3.10",
-    "rollup": "3.29.4",
-    "rollup-plugin-summary": "2.0.0"
-  }
+    "glob": "11.0.0",
+    "rollup": "4.24.0",
+    "rollup-plugin-summary": "2.0.1"
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
