--- a/server/package.json
+++ b/server/package.json
@@ -36,55 +36,55 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@apollo/server": "4.10.4",
-    "@azure/storage-blob": "12.23.0",
+    "@apollo/server": "4.11.0",
+    "@azure/storage-blob": "12.25.0",
     "@exlinc/keycloak-passport": "1.0.2",
-    "@graphql-tools/schema": "10.0.4",
-    "@graphql-tools/utils": "10.1.3",
-    "@hexagon/base64": "1.1.28",
+    "@graphql-tools/schema": "10.0.7",
+    "@graphql-tools/utils": "10.5.5",
+    "@hexagon/base64": "2.0.4",
     "@joplin/turndown-plugin-gfm": "1.0.56",
     "@node-saml/passport-saml": "5.0.0",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
-    "@simplewebauthn/server": "10.0.0",
+    "@simplewebauthn/server": "11.0.0",
     "@vue-email/compiler": "0.8.14",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
-    "aws-sdk": "2.1659.0",
+    "aws-sdk": "2.1691.0",
     "bcryptjs": "2.4.3",
     "chalk": "5.3.0",
-    "cheerio": "1.0.0-rc.12",
-    "chokidar": "3.6.0",
+    "cheerio": "1.0.0",
+    "chokidar": "4.0.1",
     "chromium-pickle-js": "0.2.0",
     "clean-css": "5.3.3",
     "command-exists": "1.2.9",
     "compression": "1.7.4",
-    "connect-session-knex": "4.0.0",
-    "cookie-parser": "1.4.6",
+    "connect-session-knex": "5.0.0",
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
     "cron-parser": "4.9.0",
     "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
     "dependency-graph": "1.0.0",
-    "diff": "5.2.0",
+    "diff": "7.0.0",
     "diff2html": "3.4.48",
-    "dompurify": "3.1.6",
+    "dompurify": "3.1.7",
     "dotize": "0.3.0",
-    "emoji-regex": "10.3.0",
+    "emoji-regex": "10.4.0",
     "eventemitter2": "6.4.9",
-    "express": "4.19.2",
+    "express": "4.21.1",
     "express-brute": "1.0.1",
-    "express-session": "1.18.0",
-    "file-type": "19.1.1",
-    "filesize": "10.1.4",
+    "express-session": "1.18.1",
+    "file-type": "19.6.0",
+    "filesize": "10.1.6",
     "fs-extra": "11.2.0",
     "getos": "3.2.1",
-    "graphql": "16.8.1",
+    "graphql": "16.9.0",
     "graphql-list-fields": "2.0.4",
     "graphql-rate-limit-directive": "2.0.5",
-    "graphql-tools": "9.0.1",
-    "graphql-upload": "16.0.2",
+    "graphql-tools": "9.0.2",
+    "graphql-upload": "17.0.0",
     "gray-matter": "4.0.3",
     "he": "1.2.0",
     "highlight.js": "11.10.0",
@@ -92,17 +92,17 @@
     "js-base64": "3.7.7",
     "js-binary": "1.2.0",
     "js-yaml": "4.1.0",
-    "jsdom": "24.1.0",
+    "jsdom": "25.0.1",
     "jsonwebtoken": "9.0.2",
     "katex": "0.16.11",
     "klaw": "4.1.0",
     "knex": "3.1.0",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
-    "luxon": "3.4.4",
+    "luxon": "3.5.0",
     "markdown-it": "14.1.0",
     "markdown-it-abbr": "2.0.0",
-    "markdown-it-attrs": "4.1.6",
+    "markdown-it-attrs": "4.2.0",
     "markdown-it-decorate": "1.2.2",
     "markdown-it-emoji": "3.0.0",
     "markdown-it-expand-tabs": "1.0.13",
@@ -121,8 +121,8 @@
     "nanoid": "5.0.7",
     "node-2fa": "2.0.3",
     "node-cache": "5.1.2",
-    "nodemailer": "6.9.14",
-    "objection": "3.1.4",
+    "nodemailer": "6.9.15",
+    "objection": "3.1.5",
     "octokit": "4.0.2",
     "passport": "0.7.0",
     "passport-auth0": "1.4.4",
@@ -144,52 +144,52 @@
     "passport-slack-oauth2": "1.2.0",
     "passport-twitch-strategy": "2.2.0",
     "pem-jwk": "2.0.0",
-    "pg": "8.12.0",
+    "pg": "8.13.0",
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.8.1",
-    "pg-query-stream": "4.6.0",
+    "pg-query-stream": "4.7.0",
     "pg-tsquery": "8.4.2",
-    "poolifier": "4.0.18",
+    "poolifier": "4.3.0",
     "prom-client": "15.1.3",
     "punycode": "2.3.1",
-    "puppeteer-core": "22.13.0",
+    "puppeteer-core": "23.6.0",
     "qr-image": "3.2.0",
-    "remove-markdown": "0.5.0",
+    "remove-markdown": "0.5.5",
     "safe-regex": "2.1.1",
     "sanitize-filename": "1.6.3",
     "scim-query-filter-parser": "2.0.4",
-    "semver": "7.6.2",
+    "semver": "7.6.3",
     "serve-favicon": "2.5.0",
-    "sharp": "0.33.4",
-    "simple-git": "3.25.0",
-    "socket.io": "4.7.5",
+    "sharp": "0.33.5",
+    "simple-git": "3.27.0",
+    "socket.io": "4.8.0",
     "striptags": "3.2.0",
     "tar-fs": "3.0.6",
     "turndown": "7.2.0",
     "twemoji": "14.0.2",
-    "ufo": "1.5.3",
+    "ufo": "1.5.4",
     "uslug": "1.0.4",
     "uuid": "10.0.0",
     "validate.js": "0.13.1",
-    "vue": "3.4.31",
+    "vue": "3.5.12",
     "xss": "1.0.15",
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "eslint": "8.56.0",
-    "eslint-config-requarks": "1.0.7",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.29.1",
+    "eslint": "9.13.0",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.4.0",
-    "nodemon": "3.1.4"
+    "eslint-plugin-promise": "7.1.0",
+    "neostandard": "0.11.6",
+    "nodemon": "3.1.7"
   },
   "overrides": {
-    "@graphql-tools/utils": "10.1.3"
+    "@graphql-tools/utils": "10.5.5"
   },
   "collective": {
     "type": "opencollective",
     "url": "https://opencollective.com/wikijs",
     "logo": "https://opencollective.com/opencollective/logo.txt"
-  }
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
