--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "js-yaml": "3.14.0",
     "jsdom": "16.4.0",
     "jsonwebtoken": "9.0.0",
+    "jwks-rsa": "3.1.0",
     "katex": "0.12.0",
     "klaw": "3.0.0",
     "knex": "0.21.7",
